@@ -18,8 +18,8 @@
  */
 package org.apache.pinot.query.runtime.executor;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -34,10 +34,11 @@ import org.apache.pinot.query.runtime.operator.MultiStageOperator;
 import org.apache.pinot.query.runtime.operator.OpChain;
 import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
+import org.apache.pinot.spi.exception.QueryCancelledException;
 import org.apache.pinot.spi.executor.ExecutorServiceUtils;
+import org.apache.pinot.spi.query.QueryThreadContext;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
-import org.testng.Assert;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 import org.testng.annotations.BeforeMethod;
@@ -46,19 +47,20 @@ import org.testng.annotations.Test;
 import static org.mockito.Mockito.clearInvocations;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.fail;
 
 
 public class OpChainSchedulerServiceTest {
-
-  private ExecutorService _executor;
   private AutoCloseable _mocks;
-
+  private ExecutorService _executor;
   private MultiStageOperator _operatorA;
 
   @BeforeClass
   public void beforeClass() {
     _mocks = MockitoAnnotations.openMocks(this);
-    _executor = Executors.newCachedThreadPool(new NamedThreadFactory("worker_on_" + getClass().getSimpleName()));
+    _executor = QueryThreadContext.contextAwareExecutorService(
+        Executors.newCachedThreadPool(new NamedThreadFactory("worker_on_" + getClass().getSimpleName())));
   }
 
   @AfterClass
@@ -78,54 +80,49 @@ public class OpChainSchedulerServiceTest {
     MailboxService mailboxService = mock(MailboxService.class);
     when(mailboxService.getHostname()).thenReturn("localhost");
     when(mailboxService.getPort()).thenReturn(1234);
-    WorkerMetadata workerMetadata = new WorkerMetadata(0, ImmutableMap.of(), ImmutableMap.of());
-    OpChainExecutionContext context =
-        new OpChainExecutionContext(mailboxService, 123L, Long.MAX_VALUE, ImmutableMap.of(),
-            new StageMetadata(0, ImmutableList.of(workerMetadata), ImmutableMap.of()), workerMetadata, null, null,
-            true);
+    WorkerMetadata workerMetadata = new WorkerMetadata(0, Map.of(), Map.of());
+    OpChainExecutionContext context = OpChainExecutionContext.fromQueryContext(mailboxService, Map.of(),
+        new StageMetadata(0, List.of(workerMetadata), Map.of()), workerMetadata, null, true);
     return new OpChain(context, operator);
   }
 
   @Test
   public void shouldScheduleSingleOpChainRegisteredAfterStart()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
       latch.countDown();
       return SuccessMseBlock.INSTANCE;
     });
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
   public void shouldScheduleSingleOpChainRegisteredBeforeStart()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
       latch.countDown();
       return SuccessMseBlock.INSTANCE;
     });
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
   public void shouldCallCloseOnOperatorsThatFinishSuccessfully()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenReturn(SuccessMseBlock.INSTANCE);
     Mockito.doAnswer(inv -> {
@@ -133,17 +130,17 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).close();
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
   public void shouldCallCancelOnOperatorsThatReturnErrorBlock()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenReturn(ErrorMseBlock.fromException(new RuntimeException("foo")));
     Mockito.doAnswer(inv -> {
@@ -151,17 +148,17 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).cancel(Mockito.any());
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
+    assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
 
   @Test
   public void shouldCallCancelOnOpChainsWhenItIsCancelledByDispatch()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch opChainStarted = new CountDownLatch(1);
     Mockito.doAnswer(inv -> {
       opChainStarted.countDown();
@@ -177,23 +174,23 @@ public class OpChainSchedulerServiceTest {
     }).when(_operatorA).cancel(Mockito.any());
     Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(opChainStarted.await(10, TimeUnit.SECONDS), "op chain doesn't seem to be started");
+    assertTrue(opChainStarted.await(10, TimeUnit.SECONDS), "op chain doesn't seem to be started");
 
     // now cancel the request.
-    schedulerService.cancel(123);
+    schedulerService.cancel(123L);
 
-    Assert.assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
+    assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
     Mockito.verify(_operatorA, Mockito.times(1)).cancel(Mockito.any());
   }
 
   @Test
   public void shouldCallCancelOnOpChainsThatThrow()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch cancelLatch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenThrow(new RuntimeException("foo"));
     Mockito.doAnswer(inv -> {
@@ -201,9 +198,90 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).cancel(Mockito.any());
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
-    Assert.assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
+    assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
     Mockito.verify(_operatorA, Mockito.times(1)).cancel(Mockito.any());
+  }
+
+  @Test
+  public void shouldThrowQueryCancelledExceptionWhenRegisteringOpChainAfterQueryCancellation() {
+    Mockito.when(_operatorA.nextBlock()).thenReturn(SuccessMseBlock.INSTANCE);
+    Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
+
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+
+      // First cancel the query with the same requestId (123L as defined in getChain method)
+      schedulerService.cancel(123L);
+
+      // Now try to register an OpChain for the same query - should throw QueryCancelledException
+      try {
+        schedulerService.register(getChain(_operatorA));
+        fail("Expected QueryCancelledException to be thrown when registering OpChain after query cancellation");
+      } catch (QueryCancelledException e) {
+        String message = e.getMessage();
+        assertTrue(message.contains("Query has been cancelled before op-chain"));
+        assertTrue(message.contains("being scheduled"));
+      }
+    }
+  }
+
+  @Test
+  public void shouldHandleConcurrentCancellationAndRegistration()
+      throws InterruptedException {
+    CountDownLatch registrationStarted = new CountDownLatch(1);
+    CountDownLatch cancellationCanProceed = new CountDownLatch(1);
+    Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
+      registrationStarted.countDown();
+      cancellationCanProceed.await();
+      return SuccessMseBlock.INSTANCE;
+    });
+    Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
+
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      // Start registration in a separate thread
+      CountDownLatch registrationCompleted = new CountDownLatch(1);
+      boolean[] registrationSucceeded = {false};
+      _executor.submit(() -> {
+        try {
+          schedulerService.register(getChain(_operatorA));
+          registrationSucceeded[0] = true;
+        } catch (QueryCancelledException e) {
+          // Expected if cancellation happens before registration
+          registrationSucceeded[0] = false;
+        } finally {
+          registrationCompleted.countDown();
+        }
+      });
+
+      // Wait for registration to start
+      assertTrue(registrationStarted.await(10, TimeUnit.SECONDS), "Registration should have started");
+
+      // Now cancel the query while it's running
+      schedulerService.cancel(123L);
+
+      // Allow the opchain execution to complete
+      cancellationCanProceed.countDown();
+
+      // Wait for registration thread to complete
+      assertTrue(registrationCompleted.await(10, TimeUnit.SECONDS), "Registration thread should complete");
+
+      // The registration should have succeeded since it started before cancellation
+      assertTrue(registrationSucceeded[0], "Registration should have succeeded");
+
+      // Now try to register another OpChain with the same requestId - should fail
+      try {
+        schedulerService.register(getChain(_operatorA));
+        fail("Expected QueryCancelledException for subsequent registration after cancellation");
+      } catch (QueryCancelledException e) {
+        assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
+      }
+    }
   }
 }
